--- a/module-1/lab-map-reduce-filter/your-code/main.ipynb
+++ b/module-1/lab-map-reduce-filter/your-code/main.ipynb
@@ -506,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -515,7 +515,7 @@
        "'PROPHET  |Almustafa, chosen beloved, who was dawn unto his own day, had waited twelve years in city of Orphalese for his ship that was to return bear him back to isle of his birth.  And in twelfth year, on seventh day of Ielool, month of reaping, he climbed hill without city walls looked seaward; he beheld his ship coming with mist.  Then gates of his heart were flung open, his joy flew far over sea. And he closed his eyes prayed in silences of his soul.  *****  But as he descended hill, sadness'"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -563,10 +563,231 @@
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>No</th>\n",
+       "      <th>year</th>\n",
+       "      <th>month</th>\n",
+       "      <th>day</th>\n",
+       "      <th>hour</th>\n",
+       "      <th>pm2.5</th>\n",
+       "      <th>DEWP</th>\n",
+       "      <th>TEMP</th>\n",
+       "      <th>PRES</th>\n",
+       "      <th>cbwd</th>\n",
+       "      <th>Iws</th>\n",
+       "      <th>Is</th>\n",
+       "      <th>Ir</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-21</td>\n",
+       "      <td>-11.0</td>\n",
+       "      <td>1021.0</td>\n",
+       "      <td>NW</td>\n",
+       "      <td>1.79</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-21</td>\n",
+       "      <td>-12.0</td>\n",
+       "      <td>1020.0</td>\n",
+       "      <td>NW</td>\n",
+       "      <td>4.92</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-21</td>\n",
+       "      <td>-11.0</td>\n",
+       "      <td>1019.0</td>\n",
+       "      <td>NW</td>\n",
+       "      <td>6.71</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-21</td>\n",
+       "      <td>-14.0</td>\n",
+       "      <td>1019.0</td>\n",
+       "      <td>NW</td>\n",
+       "      <td>9.84</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-20</td>\n",
+       "      <td>-12.0</td>\n",
+       "      <td>1018.0</td>\n",
+       "      <td>NW</td>\n",
+       "      <td>12.97</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>6</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-19</td>\n",
+       "      <td>-10.0</td>\n",
+       "      <td>1017.0</td>\n",
+       "      <td>NW</td>\n",
+       "      <td>16.10</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>7</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>6</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-19</td>\n",
+       "      <td>-9.0</td>\n",
+       "      <td>1017.0</td>\n",
+       "      <td>NW</td>\n",
+       "      <td>19.23</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>8</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>7</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-19</td>\n",
+       "      <td>-9.0</td>\n",
+       "      <td>1017.0</td>\n",
+       "      <td>NW</td>\n",
+       "      <td>21.02</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>9</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>8</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-19</td>\n",
+       "      <td>-9.0</td>\n",
+       "      <td>1017.0</td>\n",
+       "      <td>NW</td>\n",
+       "      <td>24.15</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>10</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>9</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-20</td>\n",
+       "      <td>-8.0</td>\n",
+       "      <td>1017.0</td>\n",
+       "      <td>NW</td>\n",
+       "      <td>27.28</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   No  year  month  day  hour  pm2.5  DEWP  TEMP    PRES cbwd    Iws  Is  Ir\n",
+       "0   1  2010      1    1     0    NaN   -21 -11.0  1021.0   NW   1.79   0   0\n",
+       "1   2  2010      1    1     1    NaN   -21 -12.0  1020.0   NW   4.92   0   0\n",
+       "2   3  2010      1    1     2    NaN   -21 -11.0  1019.0   NW   6.71   0   0\n",
+       "3   4  2010      1    1     3    NaN   -21 -14.0  1019.0   NW   9.84   0   0\n",
+       "4   5  2010      1    1     4    NaN   -20 -12.0  1018.0   NW  12.97   0   0\n",
+       "5   6  2010      1    1     5    NaN   -19 -10.0  1017.0   NW  16.10   0   0\n",
+       "6   7  2010      1    1     6    NaN   -19  -9.0  1017.0   NW  19.23   0   0\n",
+       "7   8  2010      1    1     7    NaN   -19  -9.0  1017.0   NW  21.02   0   0\n",
+       "8   9  2010      1    1     8    NaN   -19  -9.0  1017.0   NW  24.15   0   0\n",
+       "9  10  2010      1    1     9    NaN   -20  -8.0  1017.0   NW  27.28   0   0"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "\n",
+    "pm25.head(10)"
    ]
   },
   {
@@ -580,7 +801,18 @@
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.0"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def hourly(x):\n",
     "    '''\n",
@@ -593,7 +825,10 @@
     "    '''\n",
     "    \n",
     "    # Your code here:\n",
-    "    "
+    "    \n",
+    "    return x/24\n",
+    "\n",
+    "hourly(48)"
    ]
   },
   {
@@ -607,10 +842,159 @@
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "      <th>5</th>\n",
+       "      <th>6</th>\n",
+       "      <th>7</th>\n",
+       "      <th>8</th>\n",
+       "      <th>9</th>\n",
+       "      <th>...</th>\n",
+       "      <th>43814</th>\n",
+       "      <th>43815</th>\n",
+       "      <th>43816</th>\n",
+       "      <th>43817</th>\n",
+       "      <th>43818</th>\n",
+       "      <th>43819</th>\n",
+       "      <th>43820</th>\n",
+       "      <th>43821</th>\n",
+       "      <th>43822</th>\n",
+       "      <th>43823</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Iws</th>\n",
+       "      <td>0.074583</td>\n",
+       "      <td>0.205</td>\n",
+       "      <td>0.279583</td>\n",
+       "      <td>0.41</td>\n",
+       "      <td>0.540417</td>\n",
+       "      <td>0.670833</td>\n",
+       "      <td>0.80125</td>\n",
+       "      <td>0.875833</td>\n",
+       "      <td>1.00625</td>\n",
+       "      <td>1.136667</td>\n",
+       "      <td>...</td>\n",
+       "      <td>8.175417</td>\n",
+       "      <td>8.547917</td>\n",
+       "      <td>8.920417</td>\n",
+       "      <td>9.218333</td>\n",
+       "      <td>9.423333</td>\n",
+       "      <td>9.665417</td>\n",
+       "      <td>9.9075</td>\n",
+       "      <td>10.1125</td>\n",
+       "      <td>10.28</td>\n",
+       "      <td>10.410417</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Is</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Ir</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>3 rows × 43824 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        0      1         2      3         4         5        6         7      \\\n",
+       "Iws  0.074583  0.205  0.279583   0.41  0.540417  0.670833  0.80125  0.875833   \n",
+       "Is   0.000000  0.000  0.000000   0.00  0.000000  0.000000  0.00000  0.000000   \n",
+       "Ir   0.000000  0.000  0.000000   0.00  0.000000  0.000000  0.00000  0.000000   \n",
+       "\n",
+       "       8         9        ...         43814     43815     43816     43817  \\\n",
+       "Iws  1.00625  1.136667    ...      8.175417  8.547917  8.920417  9.218333   \n",
+       "Is   0.00000  0.000000    ...      0.000000  0.000000  0.000000  0.000000   \n",
+       "Ir   0.00000  0.000000    ...      0.000000  0.000000  0.000000  0.000000   \n",
+       "\n",
+       "        43818     43819   43820    43821  43822      43823  \n",
+       "Iws  9.423333  9.665417  9.9075  10.1125  10.28  10.410417  \n",
+       "Is   0.000000  0.000000  0.0000   0.0000   0.00   0.000000  \n",
+       "Ir   0.000000  0.000000  0.0000   0.0000   0.00   0.000000  \n",
+       "\n",
+       "[3 rows x 43824 columns]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "\n",
+    "mapping_columnas = [list(map(hourly, pm25.Iws)), list(map(hourly,pm25.Is)), list(map(hourly,pm25.Ir))]\n",
+    "pm25_hourly = pd.DataFrame(mapping_columnas, ['Iws','Is','Ir'])\n",
+    "pm25_hourly.tail(10)"
    ]
   },
   {
@@ -626,7 +1010,18 @@
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.37267799624996495"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def sample_sd(x):\n",
     "    '''\n",
@@ -640,7 +1035,29 @@
     "    \n",
     "    # Your code here:\n",
     "    \n",
-    "    "
+    "    return np.std(x)/(x.count()-1)\n",
+    "\n",
+    "sample_sd(pd.Series([1,2,3,4]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0011411830334976838"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sample_sd(pm25.Iws)"
    ]
   },
   {
