--- a/module-1/lab-map-reduce-filter/your-code/main.ipynb
+++ b/module-1/lab-map-reduce-filter/your-code/main.ipynb
@@ -840,7 +840,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -984,7 +984,7 @@
        "[3 rows x 43824 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -993,7 +993,8 @@
     "# Your code here:\n",
     "\n",
     "mapping_columnas = [list(map(hourly, pm25.Iws)), list(map(hourly,pm25.Is)), list(map(hourly,pm25.Ir))]\n",
-    "pm25_hourly = pd.DataFrame(mapping_columnas, ['Iws','Is','Ir'])\n",
+    "colnames = ['Iws','Is','Ir']\n",
+    "pm25_hourly = pd.DataFrame(mapping_columnas, colnames)\n",
     "pm25_hourly.tail(10)"
    ]
   },
