Con soluciones de Pablo

--- a/module-1/lab-api-scavenger-game/your-code/challenge-1, 2, 3.ipynb
+++ b/module-1/lab-api-scavenger-game/your-code/challenge-1, 2, 3.ipynb
@@ -1912,7 +1912,70 @@
     "response = requests.get(url)\n",
     "results = response.json()\n",
     "results\n",
+    "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'requests' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m-------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                   Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-4c997aecd68b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mresponse\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrequests\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'https://api.github.com/repos/ironhack-datalabs/scavenger/contents'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mresults\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mresponse\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjson\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mscavengerhunt\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mdata_js\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'requests' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "#Solución Pablo:\n",
+    "\n",
+    "response = requests.get('https://api.github.com/repos/ironhack-datalabs/scavenger/contents')\n",
+    "results = response.json()\n",
+    "\n",
+    "def scavengerhunt():\n",
+    "    data_js = []\n",
+    "    for result in results:\n",
+    "        if result[\"name\"] == '.gitignore':\n",
+    "            pass\n",
+    "        else:\n",
+    "            datas = requests.get('https://api.github.com/repos/ironhack-datalabs/scavenger/contents/{}'.format(result[\"name\"]))\n",
+    "            data_js += datas.json()\n",
+    "    return data_js\n",
+    "\n",
+    "data_js = scavengerhunt()\n",
+    "\n",
+    "def dataaaaa():\n",
+    "    lista = {}\n",
+    "    for bo in data_js:\n",
+    "        if bo[\"name\"].endswith('.scavengerhunt'):\n",
+    "            lista[bo[\"name\"]] = bo[\"download_url\"]\n",
+    "    return lista\n",
+    "\n",
+    "lista = dataaaaa()\n",
+    "\n",
+    "def ordedic():\n",
+    "    dic ={}\n",
+    "    for key in sorted(lista):\n",
+    "        dic[key] = lista[key]\n",
+    "    return dic\n",
+    "\n",
+    "dic = ordedic()\n",
+    "\n",
+    "def cadena():\n",
+    "    lista = []\n",
+    "    for key in dic:\n",
+    "        lista.append(requests.get(dic[key]).text[:-1])\n",
+    "    cadena = \" \".join(lista)\n",
+    "    return cadena\n",
+    "\n",
+    "cadena()"
    ]
   },
   {
@@ -1920,7 +1983,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Solucion Luis, leer esto:\n",
+    "\n",
+    "'https://api.github.com/search/code?q=repo:ironhack-datalabs/scavenger+filename:.scavengerhunt'"
+   ]
   }
  ],
  "metadata": {
