Solucion de Luis, con el api de github, más fácil

--- a/module-1/lab-api-scavenger-game/your-code/challenge-1, 2, 3.ipynb
+++ b/module-1/lab-api-scavenger-game/your-code/challenge-1, 2, 3.ipynb
@@ -1984,9 +1984,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Solucion Luis, leer esto:\n",
+    "#Solucion Luis:\n",
     "\n",
-    "'https://api.github.com/search/code?q=repo:ironhack-datalabs/scavenger+filename:.scavengerhunt'"
+    "'https://api.github.com/search/code?q=repo:ironhack-datalabs/scavenger+filename:.scavengerhunt'\n",
+    "\n",
+    "#Con el Json de esta api, puedes buscar todos los \"name\": \".0006.scavengerhunt\". Una vez los tienes,\n",
+    "#para ver qué contiene el archivo, hay que buscar todos los \"html_url\": \"https://github.com/ironhack-datalabs/scavenger/blob/9308ccc8a4c34c5e3a991ee815222a9691c32476/15024/.0006.scavengerhunt\",\n",
+    "#para abrir ese url desde jupyter o terminal, hay que hacer un response con raw, entonces puedes sacar el contenido de cada url y meterlos en una lista.\n",
+    "#con esto tendríamos el resultado del ejercicio, que pedia unir todos los contenidos de cada .scavenger y formar la frase."
    ]
   }
  ],
