--- a/module-1/pipelines-project/your-code/demo_wrangling.ipynb
+++ b/module-1/pipelines-project/your-code/demo_wrangling.ipynb
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -516,9 +516,7 @@
    "source": [
     "# Eliminamos las columnas que no vamos a utilizar\n",
     "\n",
-    "dropyears = []\n",
-    "for x in range(1960, 1970):\n",
-    "    dropyears.append(str(x))\n",
+    "dropyears = [str(x) for x in range(1960, 1970)]\n",
     "    \n",
     "print(dropyears)\n",
     "    "
@@ -1326,7 +1324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -1340,9 +1338,7 @@
    "source": [
     "# Eliminamos las filas que tienen el valor nulo\n",
     "\n",
-    "droprows = []\n",
-    "for x in range(1970, 2017):\n",
-    "    droprows.append(str(x))\n",
+    "droprows = [str(x) for x in range(1970, 2017)]\n",
     "print(droprows)"
    ]
   },
@@ -7380,9 +7376,7 @@
     "#Queremos comparar su crecimiento de población con el de España y el total de crecimiento de población mundial.\n",
     "\n",
     "demoT_pctchange_pob = demoT_pctchange[['China', 'India', 'United States', 'Spain', 'Tuvalu', 'Nauru', 'San Marino', 'World']].copy()\n",
-    "demoT_pctchange_pob\n",
-    "\n",
-    "\n"
+    "demoT_pctchange_pob\n"
    ]
   },
   {
