--- a/module-1/pipelines-project/your-code/PipelineWorldPopulationPercentageChange.ipynb
+++ b/module-1/pipelines-project/your-code/PipelineWorldPopulationPercentageChange.ipynb
@@ -57,7 +57,7 @@
     "    \n",
     "if __name__ == '__main__':\n",
     "    demo = acquire()\n",
-    "    filtered = wrangle(data)\n",
+    "    filtered = wrangle(demo)\n",
     "    max_pob = analyze_1(filtered)\n",
     "    chart = visualize_1(max_pob)\n",
     "    save_viz_1(chart)\n",
